objects/PermissionSet_Home__dll.object
<CustomObject>
    <fields>
        <fullName>DataSourceObject__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <mktDataLakeFieldAttributes>
            <definitionCreationType>System</definitionCreationType>
            <externalName>DataSourceObject</externalName>
            <isEventDate>false</isEventDate>
            <isInternalOrganization>false</isInternalOrganization>
            <isRecordModified>false</isRecordModified>
            <usageTag>NONE</usageTag>
        </mktDataLakeFieldAttributes>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DataSource__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <mktDataLakeFieldAttributes>
            <definitionCreationType>System</definitionCreationType>
            <externalName>DataSource</externalName>
            <isEventDate>false</isEventDate>
            <isInternalOrganization>false</isInternalOrganization>
            <isRecordModified>false</isRecordModified>
            <usageTag>NONE</usageTag>
        </mktDataLakeFieldAttributes>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Id__c</fullName>
        <label>Id</label>
        <length>60</length>
        <mktDataLakeFieldAttributes>
            <definitionCreationType>Custom</definitionCreationType>
            <externalName>Id</externalName>
            <isEventDate>false</isEventDate>
            <isInternalOrganization>false</isInternalOrganization>
            <isRecordModified>false</isRecordModified>
            <primaryIndexOrder>1</primaryIndexOrder>
            <usageTag>NONE</usageTag>
        </mktDataLakeFieldAttributes>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KQ_Id__c</fullName>
        <label>KQ_Id</label>
        <length>60</length>
        <mktDataLakeFieldAttributes>
            <definitionCreationType>System</definitionCreationType>
            <externalName>KQ_Id</externalName>
            <isEventDate>false</isEventDate>
            <isInternalOrganization>false</isInternalOrganization>
            <isRecordModified>false</isRecordModified>
            <usageTag>KEY_QUALIFIER</usageTag>
        </mktDataLakeFieldAttributes>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PermissionSetGroupId__c</fullName>
        <label>PermissionSetGroupId</label>
        <length>60</length>
        <mktDataLakeFieldAttributes>
            <definitionCreationType>Custom</definitionCreationType>
            <externalName>PermissionSetGroupId</externalName>
            <isEventDate>false</isEventDate>
            <isInternalOrganization>false</isInternalOrganization>
            <isRecordModified>false</isRecordModified>
            <usageTag>NONE</usageTag>
        </mktDataLakeFieldAttributes>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PermissionsEinsteinCopilotUser__c</fullName>
        <label>PermissionsEinsteinCopilotUser</label>
        <length>60</length>
        <mktDataLakeFieldAttributes>
            <definitionCreationType>Custom</definitionCreationType>
            <externalName>PermissionsEinsteinCopilotUser</externalName>
            <isEventDate>false</isEventDate>
            <isInternalOrganization>false</isInternalOrganization>
            <isRecordModified>false</isRecordModified>
            <usageTag>NONE</usageTag>
        </mktDataLakeFieldAttributes>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SfdcOrganizationId__c</fullName>
        <label>SfdcOrganizationId</label>
        <length>60</length>
        <mktDataLakeFieldAttributes>
            <definitionCreationType>Custom</definitionCreationType>
            <externalName>SfdcOrganizationId</externalName>
            <isEventDate>false</isEventDate>
            <isInternalOrganization>false</isInternalOrganization>
            <isRecordModified>false</isRecordModified>
            <usageTag>NONE</usageTag>
        </mktDataLakeFieldAttributes>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SystemModstamp__c</fullName>
        <label>SystemModstamp</label>
        <mktDataLakeFieldAttributes>
            <definitionCreationType>Custom</definitionCreationType>
            <externalName>SystemModstamp</externalName>
            <isEventDate>false</isEventDate>
            <isInternalOrganization>false</isInternalOrganization>
            <isRecordModified>true</isRecordModified>
            <usageTag>NONE</usageTag>
        </mktDataLakeFieldAttributes>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>cdp_sys_SourceVersion__c</fullName>
        <label>cdp_sys_SourceVersion</label>
        <length>60</length>
        <mktDataLakeFieldAttributes>
            <definitionCreationType>System</definitionCreationType>
            <externalName>cdp_sys_SourceVersion</externalName>
            <isEventDate>false</isEventDate>
            <isInternalOrganization>false</isInternalOrganization>
            <isRecordModified>false</isRecordModified>
            <usageTag>NONE</usageTag>
        </mktDataLakeFieldAttributes>
        <type>Text</type>
    </fields>
    <mktDataLakeAttributes>
        <creationType>Custom</creationType>
        <isEnabled>true</isEnabled>
        <objectCategory>Salesforce_SFDCReferenceModel_0_93.Related</objectCategory>
    </mktDataLakeAttributes>
</CustomObject>